Fixed green border on mobile view
When the 404 page loaded onto a mobile browser, a green bar appeared on the right side due to too many components being present in the navbar. This was fixed by hiding the extra icon in the navbar when the page was in the mobile view.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -199,4 +199,8 @@ i.right-icon {
     nav.botton-nav:last-child {
         padding-right: 3vw;
     }
+
+    i.right-icon {
+        display: none;
+    }
 }
